--- a/src/app/name-editor/name-editor.component.css
+++ b/src/app/name-editor/name-editor.component.css
@@ -1,5 +1,12 @@
-nav a {
-    padding: 1rem;
+label {
+    font-weight: bold;
+    padding-bottom: .5rem;
+    padding-top: 1rem;
+    display: inline-block;
+  }
+  
+  button {
+    max-width: 300px;
   }
   
   
