--- a/src/app/profile-editor/profile-editor.component.css
+++ b/src/app/profile-editor/profile-editor.component.css
@@ -1,5 +1,13 @@
-nav a {
-    padding: 1rem;
+/* ProfileEditorComponent's private CSS styles */
+
+form {
+    padding-top: 1rem;
+  }
+  
+  label {
+    display: block;
+    margin: .5em 0;
+    font-weight: bold;
   }
   
   
